# rpsn

./: .gitignore  Cargo.toml  README.ja.md  README.md  clippy.toml  compose.yaml  justfile  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci.yaml  duplicate-issue-detection.yaml  publish.yaml
docs/: ARCHITECTURE.md  DEVELOPING.md  ERRORS.md  PLAN.md  SPEC.md  TEST_COVERAGE.md
src/: cli.rs  config.rs  error_report.rs  main.rs  output.rs  skills.rs  telemetry.rs  telemetry_span.rs
src/ai/: client.rs  mod.rs
src/api/: client.rs  live_api_tests.rs  mod.rs  types.rs
src/api/endpoints/: file.rs  idlink.rs  inbox.rs  me.rs  mod.rs  note.rs  project.rs  space.rs  tag.rs  task.rs  user.rs  webhook.rs
src/commands/: config.rs  file.rs  idlink.rs  inbox.rs  me.rs  mod.rs  note.rs  project.rs  report.rs  space.rs  tag.rs  task.rs  user.rs  util.rs  webhook.rs
