[package]
name = "rpsn"
version = "2025.12.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1"
clap_complete = "4.5"
colored = "2.1"
regex-lite = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.8"
insta = { version = "1.34", features = ["json"] }
mockall = "0.12"
proptest = "1.5"
