[package]
name = "rpsn"
version = "2026.2.0"
edition = "2021"
description = "A command-line interface for Repsona task management system."
license = "MIT"
repository = "https://github.com/f4ah6o/rpsn"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.0"
clap_complete = "4.5"
colored = "2.1"
regex-lite = "0.1"
once_cell = "1.19"
async-trait = "0.1"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.29"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
insta = { version = "1.34", features = ["json"] }
mockall = "0.12"
proptest = "1.5"
